--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
         background-size: cover;
       }
 
+      .container {
+        width: 80%;
+      }
+
       a:hover {
         color: white !important;
         transition: all 1s;
@@ -40,11 +44,11 @@
       #fade-in {
         opacity: 0%;
         animation: fade-in 2s forwards;
-        animation-delay: 2s;
       }
 
       #slide {
         animation: slide 2s forwards;
+        margin-left: 100%;
       }
 
       @keyframes slide {
@@ -66,11 +70,11 @@
     </style>
     <nav
       class="navbar navbar-default"
-      style="margin: 0; background-color: rgb(36, 36, 36)"
+      style="margin: 0; background-color: rgb(63, 63, 63)"
     >
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">F.M.I.</a>
+          <a class="navbar-brand" href="#">FMI</a>
         </div>
         <ul class="nav navbar-nav pull-left">
           <li><a href="#">Home</a></li>
@@ -81,9 +85,20 @@
     </nav>
 
     <div class="jumbotron text-center parallax">
-      <h1>Failure Management Institution</h1>
-      <p>Turning Your Bsians Into Asians Since Before Your Mother</p>
-      <button class="btn btn-info" href="#">Learn More!</button>
+      <h1 id="fade-in" style="animation-delay: 0.25s">
+        Failure Management Institution
+      </h1>
+      <p id="fade-in" style="animation-delay: 1.25s">
+        Turning Your Bsians Into Asians Since Before Your Mother
+      </p>
+      <button
+        id="fade-in"
+        class="btn btn-info"
+        href="#"
+        style="animation-delay: 2.25s"
+      >
+        Learn More!
+      </button>
     </div>
 
     <div class="container">
@@ -93,6 +108,7 @@
         style="
           background-color: rgba(0, 0, 0, 0.069);
           border-left-color: rgba(0, 0, 0, 0.405);
+          animation-delay: 2.25s;
         "
       >
         <p>"I swam all the way from China and you get a B in Geography!"</p>
@@ -100,7 +116,7 @@
       </blockquote>
     </div>
 
-    <div class="container" id="slide">
+    <div class="container" id="slide" style="animation-delay: 2.25s">
       <h1 class="page-header">Welcome!</h1>
       <p class="lead">
         FMI is our best failure-management operations lorem ipsum blah blah
@@ -108,6 +124,58 @@
       </p>
       <p>
         FMI founded before your mother was born, is the #1 failure management
+        institution in the nation. We turn your Bsians into Asians, and lazians
+        into prosians. FMI founded before your mother was born, is the #1
+        failure management institution in the nation. We turn your Bsians into
+        Asians, and lazians into prosians. FMI founded before your mother was
+        born, is the #1 failure management institution in the nation. We turn
+        your Bsians into Asians, and lazians into prosians. FMI founded before
+        your mother was born, is the #1 failure management institution in the
+        nation. We turn your Bsians into Asians, and lazians into prosians. FMI
+        founded before your mother was born, is the #1 failure management
+        institution in the nation. We turn your Bsians into Asians, and lazians
+        into prosians. FMI founded before your mother was born, is the #1
+        failure management institution in the nation. We turn your Bsians into
+        Asians, and lazians into prosians.
+      </p>
+
+      <p>
+        FMI founded before your mother was born, is the #1 failure management
+        institution in the nation. We turn your Bsians into Asians, and lazians
+        into prosians. FMI founded before your mother was born, is the #1
+        failure management institution in the nation. We turn your Bsians into
+        Asians, and lazians into prosians. FMI founded before your mother was
+        born, is the #1 failure management institution in the nation. We turn
+        your Bsians into Asians, and lazians into prosians. FMI founded before
+        your mother was born, is the #1 failure management institution in the
+        nation. We turn your Bsians into Asians, and lazians into prosians. FMI
+        founded before your mother was born, is the #1 failure management
+        institution in the nation. We turn your Bsians into Asians, and lazians
+        into prosians. FMI founded before your mother was born, is the #1
+        failure management institution in the nation. We turn your Bsians into
+        Asians, and lazians into prosians. FMI founded before your mother was
+        born, is the #1 failure management institution in the nation. We turn
+        your Bsians into Asians, and lazians into prosians. FMI founded before
+        your mother was born, is the #1 failure management institution in the
+        nation. We turn your Bsians into Asians, and lazians into prosians. FMI
+        founded before your mother was born, is the #1 failure management
+        institution in the nation. We turn your Bsians into Asians, and lazians
+        into prosians. FMI founded before your mother was born, is the #1
+        failure management institution in the nation. We turn your Bsians into
+        Asians, and lazians into prosians.
+      </p>
+
+      <p>
+        FMI founded before your mother was born, is the #1 failure management
+        institution in the nation. We turn your Bsians into Asians, and lazians
+        into prosians. FMI founded before your mother was born, is the #1
+        failure management institution in the nation. We turn your Bsians into
+        Asians, and lazians into prosians. FMI founded before your mother was
+        born, is the #1 failure management institution in the nation. We turn
+        your Bsians into Asians, and lazians into prosians. FMI founded before
+        your mother was born, is the #1 failure management institution in the
+        nation. We turn your Bsians into Asians, and lazians into prosians. FMI
+        founded before your mother was born, is the #1 failure management
         institution in the nation. We turn your Bsians into Asians, and lazians
         into prosians. FMI founded before your mother was born, is the #1
         failure management institution in the nation. We turn your Bsians into
